# sionna

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERFILE  LICENSE  MANIFEST.in  Makefile  OLD_Sionna_Ray_Tracing_Sensing.ipynb  README.md  SECURITY.md  Sionna_Ray_Tracing_Asset.ipynb  Sionna_Ray_Tracing_Sensing.ipynb  environment.yml  pylintrc  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_test.txt  setup.cfg  spec-file.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 10-bug_report.md  20-feature_request.md  90-blank.md
.github/workflows/: codeql-analysis.yml  pylint.yml
.gitlab/: gitlab-ci.yml
doc/: build_docs.sh  make.bat
doc/source/: citation.rst  conf.py  em_primer.rst  index.rst  installation.rst  made_with_sionna.rst  rt  tutorials.rst
docs/: .buildinfo  citation.html  em_primer.html  genindex.html  index.html  installation.html  made_with_sionna.html  objects.inv  quickstart.html  search.html  searchindex.js  tutorials.html
docs/_modules/: index.html
docs/_sources/: citation.rst.txt  em_primer.rst.txt  index.rst.txt  installation.rst.txt  made_with_sionna.rst.txt  quickstart.rst.txt  tutorials.rst.txt
docs/api/: channel.discrete.html  channel.html  channel.optical.html  channel.wireless.html  config.html  fec.conv.html  fec.crc.html  fec.html  fec.interleaving.html  fec.ldpc.html  fec.linear.html  fec.polar.html  fec.scrambling.html  fec.turbo.html  fec.utils.html  mapping.html  mimo.html  nr.html  ofdm.html  rt.html  signal.html  sionna.html  utils.html
docs/examples/: 5G_Channel_Coding_Polar_vs_LDPC_Codes.html  5G_Channel_Coding_Polar_vs_LDPC_Codes.ipynb  5G_NR_PUSCH.html  5G_NR_PUSCH.ipynb  Autoencoder.html  Autoencoder.ipynb  Bit_Interleaved_Coded_Modulation.html  CIR_Dataset.html  CIR_Dataset.ipynb  DeepMIMO.html  DeepMIMO.ipynb  Discover_Sionna.html  Discover_Sionna.ipynb  Evolution_of_FEC.html  Evolution_of_FEC.ipynb  Hello_World.html  Introduction_to_Iterative_Detection_and_Decoding.html  Introduction_to_Iterative_Detection_and_Decoding.ipynb  MIMO_OFDM_Transmissions_over_CDL.html  MIMO_OFDM_Transmissions_over_CDL.ipynb  Neural_Receiver.html  Neural_Receiver.ipynb  OFDM_MIMO_Detection.html  Optical_Lumped_Amplification_Channel.html  Optical_Lumped_Amplification_Channel.ipynb  Pulse_shaping_basics.html  Realistic_Multiuser_MIMO_Simulations.html  Realistic_Multiuser_MIMO_Simulations.ipynb  Simple_MIMO_Simulation.html  Simple_MIMO_Simulation.ipynb  Sionna_Ray_Tracing_Coverage_Map.html  Sionna_Ray_Tracing_Diffraction.html  Sionna_Ray_Tracing_Introduction.html  Sionna_Ray_Tracing_Introduction.ipynb  Sionna_Ray_Tracing_Mobility.html  Sionna_Ray_Tracing_RIS.html  Sionna_Ray_Tracing_RIS.ipynb  Sionna_Ray_Tracing_Scattering.html  Sionna_Ray_Tracing_Scattering.ipynb  Sionna_tutorial_part1.html  (+10 more)
docs/phy/: index.html  tutorials.html
docs/rk/: index.html  quickstart.html  setup.html  tutorials.html
docs/rt/: em_primer.html  index.html  tutorials.html
docs/sys/: index.html  tutorials.html
env/: pyvenv.cfg
examples/: 5G_Channel_Coding_Polar_vs_LDPC_Codes.ipynb  5G_NR_PUSCH.ipynb  Autoencoder.ipynb  Bit_Interleaved_Coded_Modulation.ipynb  CIR_Dataset.ipynb  DeepMIMO.ipynb  DeepMIMO_Sionna_example.ipynb  Discover_Sionna.ipynb  Evolution_of_FEC.ipynb  Hello_World.ipynb  Introduction_to_Iterative_Detection_and_Decoding.ipynb  MIMO_OFDM_Transmissions_over_CDL.ipynb  Neural_Receiver.ipynb  OFDM_MIMO_Detection.ipynb  Optical_Lumped_Amplification_Channel.ipynb  Pulse_shaping_basics.ipynb  Realistic_Multiuser_MIMO_Simulations.ipynb  Simple_MIMO_Simulation.ipynb  Sionna_Ray_Tracing_Analog_Beamsteering.ipynb  Sionna_Ray_Tracing_Asset.ipynb  Sionna_Ray_Tracing_Debug.py  Sionna_Ray_Tracing_Diffraction.ipynb  Sionna_Ray_Tracing_Mobility.ipynb  Sionna_Ray_Tracing_MultipleFrequency.ipynb  Sionna_Ray_Tracing_RIS.ipynb  Sionna_Ray_Tracing_Refraction.ipynb  Sionna_Ray_Tracing_Scattering.ipynb  Sionna_tutorial_part1.ipynb  Sionna_tutorial_part2.ipynb  Sionna_tutorial_part3.ipynb  Sionna_tutorial_part4.ipynb  Weighted_BP_Algorithm.ipynb  dev_blog_example.ipynb  run_all_notebooks.sh
examples/optical/: lumped_amplification.ipynb
sionna/: __init__.py  config.py  constants.py  mapping.py
sionna/channel/: __init__.py  apply_ofdm_channel.py  apply_time_channel.py  awgn.py  channel_model.py  cir_dataset.py  constants.py  discrete_channel.py  flat_fading_channel.py  generate_ofdm_channel.py  generate_time_channel.py  ofdm_channel.py  rayleigh_block_fading.py  spatial_correlation.py  time_channel.py  utils.py
sionna/fec/: __init__.py  crc.py  interleaving.py  scrambling.py  utils.py
sionna/mimo/: __init__.py  detection.py  equalization.py  precoding.py  stream_management.py  utils.py
sionna/nr/: __init__.py  carrier_config.py  config.py  layer_mapping.py  pusch_channel_estimation.py  pusch_config.py  pusch_dmrs_config.py  pusch_pilot_pattern.py  pusch_precoder.py  pusch_receiver.py  pusch_transform_precoder.py  pusch_transmitter.py  tb_config.py  tb_decoder.py  tb_encoder.py  utils.py
sionna/ofdm/: __init__.py  channel_estimation.py  demodulator.py  detection.py  equalization.py  interference.py  interference_estimation.py  modulator.py  pilot_pattern.py  precoding.py  resource_grid.py
sionna/rt/: __init__.py  antenna.py  antenna_array.py  ris.py  (+23 more)
test/: Validation of the Polar 5G Rate-Matching.ipynb  channel_test_utils.py  conftest.py  pytest.ini  run_all_tests.sh  test_3gpp_channel_cdl.py  test_3gpp_channel_channel_coefficients.py  test_3gpp_channel_lsp.py  test_3gpp_channel_scenario.py  test_3gpp_channel_tdl.py  test_apply_channel.py  test_conv_encoding.py  test_edfa.py  test_fec_utils.py  test_fiber.py  test_filter.py  test_flat_fading_channel.py  test_interleaving.py  test_ldpc_decoding.py  test_ldpc_encoding.py  test_mapping.py  test_ofdm.py  test_optical.py  test_pilot_pattern.py  test_polar_decoding.py  test_polar_utils.py  test_scrambling.py  test_spatial_correlation.py  test_utils.py  test_utils_tensor.py
tutorials/: rt  run_all_notebooks.sh  run_single_notebook.sh
(+4173 files in other folders)
