[metadata]
name = sionna
version = attr: sionna.__version__
author = The Sionna contributors
author_email = sionna@nvidia.com
description = Sionna -- A TensorFlow-based open-source library for simulating the physical layer of wireless communication systems
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
url = https://nvlabs.github.io/sionna/
download_url = https://github.com/NVlabs/sionna/releases
project_urls =
    Bug Tracker = https://github.com/NVlabs/sionna/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir == .
packages = find:
include_package_data = True
python_requires = >=3.6

install_requires =
    tensorflow >=2.7.4, !=2.8.0, !=2.8.1, !=2.8.2, !=2.8.3, !=2.9.0, !=2.9.1 ; sys_platform != "darwin"
    tensorflow-macos >=2.7 ; sys_platform == "darwin"
    numpy
    matplotlib
    scipy >=1.6.0
    importlib_resources

[options.package_data]
* = *.csv, *.npy, *.json


