[metadata]
name = sionna
version = attr: sionna.__version__
author = The Sionna contributors
author_email = sionna@nvidia.com
description = Sionna -- A TensorFlow-based open-source library for simulating the physical layer of wireless communication systems
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
url = https://nvlabs.github.io/sionna/
download_url = https://github.com/NVlabs/sionna/releases
project_urls =
    Bug Tracker = https://github.com/NVlabs/sionna/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir == .
packages = find:
include_package_data = True
python_requires = >=3.8

install_requires =
    tensorflow >=2.10.1, !=2.11.0, <2.16.0 ; sys_platform != "darwin"
    tensorflow-macos >=2.10, <2.16.0 ; sys_platform == "darwin"
    numpy
    matplotlib
    scipy >=1.6.0
    importlib_resources
    mitsuba >= 3.2.0
    pythreejs >= 2.4.2
    ipywidgets >= 8.0.4
    ipydatawidgets == 4.3.2
    jupyterlab-widgets == 3.0.5

[options.package_data]
* = *.csv, *.npy, *.json, *.xml, *.ply


